milli/src/search/new/tests/snapshots/milli__search__new__tests__exactness__exactness_attribute_starts_with_phrase-3.snap
---
source: milli/src/search/new/tests/exactness.rs
expression: "format!(\"{document_ids_scores:#?}\")"
---
[
    (
        6,
        [
            Words(
                Words {
                    matching_words: 7,
                    max_matching_words: 7,
                },
            ),
            ExactAttribute(
                ExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 8,
                    max_rank: 8,
                },
            ),
        ],
    ),
    (
        5,
        [
            Words(
                Words {
                    matching_words: 7,
                    max_matching_words: 7,
                },
            ),
            ExactAttribute(
                MatchesStart,
            ),
            Exactness(
                Rank {
                    rank: 8,
                    max_rank: 8,
                },
            ),
        ],
    ),
    (
        4,
        [
            Words(
                Words {
                    matching_words: 7,
                    max_matching_words: 7,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 8,
                    max_rank: 8,
                },
            ),
        ],
    ),
    (
        3,
        [
            Words(
                Words {
                    matching_words: 7,
                    max_matching_words: 7,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 7,
                    max_rank: 8,
                },
            ),
        ],
    ),
    (
        1,
        [
            Words(
                Words {
                    matching_words: 4,
                    max_matching_words: 7,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 5,
                    max_rank: 5,
                },
            ),
        ],
    ),
    (
        7,
        [
            Words(
                Words {
                    matching_words: 1,
                    max_matching_words: 7,
                },
            ),
            ExactAttribute(
                ExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 2,
                    max_rank: 2,
                },
            ),
        ],
    ),
]
