milli/src/search/new/tests/snapshots/milli__search__new__tests__exactness__exactness_attribute_starts_with_phrase.snap
---
source: milli/src/search/new/tests/exactness.rs
expression: "format!(\"{document_ids_scores:#?}\")"
---
[
    (
        6,
        [
            Words(
                Words {
                    matching_words: 7,
                    max_matching_words: 7,
                },
            ),
            ExactAttribute(
                ExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 6,
                    max_rank: 6,
                },
            ),
        ],
    ),
    (
        5,
        [
            Words(
                Words {
                    matching_words: 7,
                    max_matching_words: 7,
                },
            ),
            ExactAttribute(
                MatchesStart,
            ),
            Exactness(
                Rank {
                    rank: 6,
                    max_rank: 6,
                },
            ),
        ],
    ),
    (
        4,
        [
            Words(
                Words {
                    matching_words: 7,
                    max_matching_words: 7,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 6,
                    max_rank: 6,
                },
            ),
        ],
    ),
    (
        1,
        [
            Words(
                Words {
                    matching_words: 4,
                    max_matching_words: 7,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 3,
                    max_rank: 3,
                },
            ),
        ],
    ),
]
