milli/src/search/new/tests/snapshots/milli__search__new__tests__exactness__exactness_simple_random.snap
---
source: milli/src/search/new/tests/exactness.rs
expression: "format!(\"{document_ids_scores:#?}\")"
---
[
    (
        8,
        [
            Words(
                Words {
                    matching_words: 9,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 10,
                    max_rank: 10,
                },
            ),
        ],
    ),
    (
        7,
        [
            Words(
                Words {
                    matching_words: 3,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 4,
                    max_rank: 4,
                },
            ),
        ],
    ),
    (
        4,
        [
            Words(
                Words {
                    matching_words: 2,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 3,
                    max_rank: 3,
                },
            ),
        ],
    ),
    (
        6,
        [
            Words(
                Words {
                    matching_words: 2,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 3,
                    max_rank: 3,
                },
            ),
        ],
    ),
    (
        3,
        [
            Words(
                Words {
                    matching_words: 1,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 2,
                    max_rank: 2,
                },
            ),
        ],
    ),
    (
        5,
        [
            Words(
                Words {
                    matching_words: 1,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            Exactness(
                Rank {
                    rank: 2,
                    max_rank: 2,
                },
            ),
        ],
    ),
]
