milli/src/search/new/tests/snapshots/milli__search__new__tests__exactness__proximity_after_exactness-4.snap
---
source: milli/src/search/new/tests/exactness.rs
expression: "format!(\"{document_ids_scores:#?}\")"
---
[
    (
        0,
        [
            Words(
                Words {
                    matching_words: 9,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            ExactWords(
                ExactWords {
                    matching_words: 9,
                    max_matching_words: 9,
                },
            ),
            Proximity(
                Rank {
                    rank: 35,
                    max_rank: 57,
                },
            ),
        ],
    ),
    (
        1,
        [
            Words(
                Words {
                    matching_words: 9,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            ExactWords(
                ExactWords {
                    matching_words: 9,
                    max_matching_words: 9,
                },
            ),
            Proximity(
                Rank {
                    rank: 35,
                    max_rank: 57,
                },
            ),
        ],
    ),
    (
        2,
        [
            Words(
                Words {
                    matching_words: 9,
                    max_matching_words: 9,
                },
            ),
            ExactAttribute(
                NoExactMatch,
            ),
            ExactWords(
                ExactWords {
                    matching_words: 9,
                    max_matching_words: 9,
                },
            ),
            Proximity(
                Rank {
                    rank: 35,
                    max_rank: 57,
                },
            ),
        ],
    ),
]
